objects/Journey__c.object
<CustomObject>
    <fields>
        <fullName>Unomy_Alexa_US_Rank__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Alexa_US_Rank__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Alexa_US_Rank__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Alexa US Rank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Available_Contacts__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Available_Contacts__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Available_Contacts__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Available Contacts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Email__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Company_Email__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Company_Email__c,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Company Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_ID__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Company_ID__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Company_ID__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Company ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Name__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Company_Name__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Company_Name__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Phone__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Company_Phone__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Company_Phone__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Company Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size_Min__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Company_Size_Max__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Company_Size_Max__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Company Size Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Company_Size__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Company_Size__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Company Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Stock_Symbol__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Company_Stock_Symbol__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Company_Stock_Symbol__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Company Stock Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Administration__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Administration__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Administration__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Administration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Consulting__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Consulting__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Consulting__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Consulting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Creative__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Creative__c	, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Creative__c	 ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Creative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Engineering__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Engineering__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Engineering__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Engineering</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Finance__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Finance__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Finance__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Finance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Human_Resources__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Human_Resources__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Human_Resources__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Human Resources</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_IT__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_IT__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_IT__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job IT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Legal__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Legal__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Legal__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Legal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Marketing__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Marketing__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Marketing__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Marketing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Medical__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Medical__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Medical__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Medical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Operations__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Operations__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Operations__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Operations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Other__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Other__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Other__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Product__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Product__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Product__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Sales__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Sales__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Sales__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Support__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Support__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Support__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Training__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Job_Training__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Job_Training__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Job Training</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_C_Level__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Mgmt_C_Level__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Mgmt_C_Level__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Mgmt C Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Directors__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Mgmt_Directors__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Mgmt_Directors__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Mgmt Directors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Managers__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Mgmt_Managers__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Mgmt_Managers__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Mgmt Managers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_Non_Managers__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Mgmt_Non_Managers__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Mgmt_Non_Managers__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Mgmt Non Managers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Mgmt_VP_Level__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Contacts_Mgmt_VP_Level__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Contacts_Mgmt_VP_Level__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Contacts Mgmt VP Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue_Max__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Estimated_Revenue_Max__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Estimated_Revenue_Max__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Estimated Revenue Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue_Min__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Estimated_Revenue_Min__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Estimated_Revenue_Min__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Estimated Revenue Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Estimated_Revenue__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Estimated_Revenue__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Estimated_Revenue__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Estimated Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Facebook_Likes__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Facebook_Likes__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Facebook_Likes__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Facebook Likes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Founded__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Founded__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Founded__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Founded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Industries__c</fullName>
        <label>Unomy Industries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Industry__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Industry__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Industry__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Investments__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Investments__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Investments__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Investments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Investors__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Investors__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Investors__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Investors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Latest_Round__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Latest_Round__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Latest_Round__c ,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Latest Round</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unomy_Lease_Details_URL__c</fullName>
        <label>Lease Details - Unomy</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_Address__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Location_Address__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Location_Address__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_City__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Location_City__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Location_City__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Location City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_Country__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Location_Country__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Location_Country__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Location Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Location_State__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Location_State__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Location_State__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Location State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Metadata__c</fullName>
        <label>Unomy Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Technologies_Used__c</fullName>
        <label>Unomy Technologies Used</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Total_Funding_Full__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Total_Funding_Full__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Total_Funding_Full__c ,""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Total Funding Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Total_Funding__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Total_Funding__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Total_Funding__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Twitter_Followers__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Twitter_Followers__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Twitter_Followers__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Twitter Followers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Updated_DateTime__c</fullName>
        <formula>IF( Primary_Lead__c != NULL , Primary_Lead__r.Unomy_Updated_DateTime__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Unomy_Updated_DateTime__c ,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unomy Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unomy_User__c</fullName>
        <label>Unomy User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <description>This field will decide which team will work on Journey at a given time. NMD, Enterprise etc.</description>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Enterprise Solutions</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Deactivation_Updated_On__c</fullName>
        <formula>Primary_Lead__r.User_Deactivation_Updated_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Deactivation Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Kind__c</fullName>
        <formula>IF(Primary_Lead__c &lt;&gt; NULL,'Potential', Primary_Contact__r.User_Kind__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Kind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWFB__c</fullName>
        <formula>(CONTAINS(Lead_Source_Detail__c, "[Content] Theme Feature")|| 
CONTAINS(Lead_Source_Detail__c, "[Content] Member Feature")|| 
utm_campaign__c="1578558881"|| 
utm_campaign__c="1578561050"|| 
utm_campaign__c="1578783487"|| 
utm_campaign__c="1578561812"|| 
utm_campaign__c="1580020557"|| 
utm_campaign__c="1580074202"|| 
utm_campaign__c="1580294374"|| 
utm_campaign__c="1580293612"|| 
utm_campaign__c="21744568"|| 
utm_campaign__c="1588466610"|| 
utm_campaign__c="1589170053"|| 
utm_campaign__c="1589171649"|| 
utm_campaign__c="1588994381"|| 
utm_campaign__c="1589174331"|| 
utm_campaign__c="1589138129"|| 
utm_campaign__c="1589325723"|| 
utm_campaign__c="1589478652"|| 
utm_campaign__c="1589478910"|| 
BEGINS(CampaignId__r.Name,"WWFB"))
&amp;&amp; Lead_Source_Detail__c != "Landlord Landing Page"</formula>
        <label>WWFB?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Activity_Score__c</fullName>
        <formula>/*IF( ISNULL(Primary_Contact__c), Primary_Lead__r.Website_Activity_Score__c, Primary_Contact__r.Website_Activity_Score__c)*/ 

IF(Primary_Lead__c != NULL, Primary_Lead__r.Website_Activity_Score__c, IF( Primary_Contact__c != NULL, Primary_Contact__r.Website_Activity_Score__c, 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website Activity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unomy_company_website__c</fullName>
        <label>unomy company website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign_id__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_campaign_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_sfdc__c</fullName>
        <description>Used for mapping Campaign Id from utm parameters</description>
        <formula>IF((BEGINS(utm_campaign__c, "sfid")), MID(utm_campaign__c, 6, 18), "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>utm_sfdc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <description>one of the utm_ parameter passed by websites and other external system</description>
        <label>utm_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>We are going to use this object as Sales Journey of the user. Which begins when a person shows interest in one of our products or we decide to reach out to show our products.</description>
    <label>Journey</label>
    <nameField>
        <label>Customer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NMD_Next_Contact_Date__c</columns>
        <columns>Building_Interested_In__c</columns>
        <columns>Market__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Lead__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Primary_Phone__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Lead_Source__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Started</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <role>Admin</role>
            <role>NMD_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_My_Journeys</fullName>
        <columns>Company_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Primary_Phone__c</columns>
        <columns>Primary_Email__c</columns>
        <columns>Building_Interested_In__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Lead_Source_Detail__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <label>All My Journeys</label>
        <sharedTo>
            <roleAndSubordinates>APAC</roleAndSubordinates>
            <roleAndSubordinates>EMEA</roleAndSubordinates>
            <roleAndSubordinates>India</roleAndSubordinates>
            <roleAndSubordinates>LatAm</roleAndSubordinates>
            <roleAndSubordinates>North_America</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_My_Open_Journeys</fullName>
        <columns>Company_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Primary_Phone__c</columns>
        <columns>Primary_Email__c</columns>
        <columns>Markets_Interested__c</columns>
        <columns>Building_Interested_In__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Lead_Source_Detail__c</columns>
        <columns>Locale__c</columns>
        <columns>Market__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Unqualified,Completed,Transferred</value>
        </filters>
        <filters>
            <field>Outreach_Stage__c</field>
            <operation>equals</operation>
            <value>Call 1,Call 2,Manual Outreach,MC Outreach 1,MC Outreach 2</value>
        </filters>
        <label>All My Open Journeys</label>
        <sharedTo>
            <role>CEO</role>
            <roleAndSubordinates>Referral_Sales_Associate</roleAndSubordinates>
            <roleAndSubordinates>Referral_Sales_Lead</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amex_PGA_Contacts_for_Review_Journey</fullName>
        <columns>NAME</columns>
        <columns>Primary_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Lead_Source_Detail__c</columns>
        <columns>LeadSource_Sub_Type__c</columns>
        <columns>Marketing_Consent__c</columns>
        <columns>Email_Opt_Out__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Lead_Source_Detail__c</field>
            <operation>equals</operation>
            <value>Amex Business Platinum</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Started,Accepted</value>
        </filters>
        <filters>
            <field>Owner_Role__c</field>
            <operation>notContain</operation>
            <value>Amex</value>
        </filters>
        <label>Amex PGA Contacts for Review</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amex_PGA_Journeys</fullName>
        <columns>NAME</columns>
        <columns>Primary_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead_Source__c</columns>
        <columns>Lead_Source_Detail__c</columns>
        <columns>Status__c</columns>
        <columns>Looking_For_Number_Of_Desk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Lead__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Owner_Role__c</field>
            <operation>notContain</operation>
            <value>Amex</value>
        </filters>
        <filters>
            <field>Lead_Source_Detail__c</field>
            <operation>equals</operation>
            <value>Amex Business Platinum</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Started,Accepted</value>
        </filters>
        <label>Amex PGA Journeys</label>
        <sharedTo>
            <role>Amex_PGA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amex_PGA_Queue_Journey</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Primary_Lead__c</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/8/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Unqualified</value>
        </filters>
        <label>Amex PGA Queue</label>
        <queue>Amex_PGA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amex_PGA_Unresponsive_Journeys</fullName>
        <columns>NAME</columns>
        <columns>Primary_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Lead_Source__c</columns>
        <columns>Lead_Source_Detail__c</columns>
        <columns>Looking_For_Number_Of_Desk__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/7/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>Owner_Role__c</field>
            <operation>contains</operation>
            <value>Amex</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Unresponsive</value>
        </filters>
        <label>Amex PGA Unresponsive Journeys</label>
    </listViews>
</CustomObject>